# StudyFlow

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.en.md  README.md  README_zh.md
src/RemiEg/: README.en.md  README.md  README_zh.md  pyproject.toml
src/RemiEg/day01/: hello.py
src/RemiEg/day02/: login_app.py  login_app2.py
src/RemiEg/day03/: user_form_app.py
src/RemiEg/day04/: calculator_app.py
src/RemiEg/day05/: progress_bar_app.py
src/RemiEg/day06/: multi_page_app.py
src/RemiEg/day07/: flask_server.py  remi_client.py
src/RemiEg/day08/: init_db.py  remi_task_manager.py  tasks.db
src/RemiEg/day09/: remi_matplotlib_app.py
src/RemiEg/day10/: data.csv  remi_pandas_app.py
src/RemiEg/day11/: remi_opencv_app.py
src/niceguiEg/: pyproject.toml
src/niceguiEg/src/01/: fc.py  hello.py
src/niceguiEg/src/02/: btnTest.py  checkboxEg.py  checkboxEg2.py  data.csv  employee.py  inputEg.py  mtools.py  selectEg.py  tblTest.py
src/niceguiEg/src/03/: DashboardLayout.py
src/niceguiEg/src/game/: memory_game.py  龙舟比赛计时器.py  龙舟竞渡模拟器.py
src/streamLib/: README.en.md  README.md  README_zh.md  pyproject.toml
src/streamLib/src/day01/: app.py
src/streamLib/src/day02/: app.py
src/streamLib/src/day03/: app.py
src/streamLib/src/day04/: app.py
src/streamLib/src/day05/: 05app.py
src/streamLib/src/day06/: 06app.py
src/streamLib/src/day07/: 07app.py
src/streamLib/src/day08/: main_page.py
src/streamLib/src/day08/pages/: 1_📊_数据分析.py  2_👥_用户管理.py  3_⚙️_系统设置.py
src/streamLib/src/day08/utils/: auth.py
src/streamLib/src/day09/: 09app.py  get-data.py  sklearnTest.py
src/streamLib/src/day10/: data.db  main.py  requirements.txt
src/streamLib/src/day10/.streamlit/: config.toml
(+70 files in other folders)
