[project]
name = "remieg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "matplotlib>=3.10.1",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.2.3",
    "remi>=2022.7.27",
    "requests>=2.32.3",
    "setuptools>=76.0.0",
]

[[index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
