[project]
name = "streamlib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pywencai>=0.13.1",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.43.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[[index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
